--- a/front-end/src/styles/sidebar.css
+++ b/front-end/src/styles/sidebar.css
@@ -1,24 +1,15 @@
-.side-bar {
-  height: 100% !important;
+.side-menu-container {
   display: flex;
   flex-direction: column;
-  border-right: 1px solid;
-  border-radius: 0;
-  border-color: rgba(64, 194, 133, 0.693);
-  background-color: rgb(255, 255, 255);
-  transition: 0.8s ease;
+  position: absolute;
+  transition: 0.6s;
+  width: 200px;
 }
 
-.toggle-menu {
-  height: 50px;
-  border-top-right-radius: 10rem;
-  border-bottom-right-radius: 9rem;
-  width: 10px;
-  position: absolute;
-  left: 0;
-  outline: none;
-  z-index: 1;
-  background-color: rgba(64, 194, 133, 0.693);
-  border-color: rgba(64, 194, 133, 0.693);
-  border-left: 0;
+.show-side-menu {
+  transform: translate(0px);
+}
+
+.hide-side-menu {
+  transform: translate(-200px);
 }
