--- a/front-end/src/styles/Login.css
+++ b/front-end/src/styles/Login.css
@@ -8,6 +8,15 @@
   padding: 15% 0 0;
 }
 
+@media screen and ( max-width: 760px) {
+  .ContainerLogin {
+    background-size: 115%;
+  }
+  .InputLogin {
+    max-width: 80%;
+  }
+}
+
 .FormLogin {
   align-items: center;
   display: flex;
@@ -26,5 +35,6 @@
 .NoAccountBtn {
   background-color: white;
   border-style: none;
+  margin: 5px 0 15px;
   padding: 5px;
 }
