--- a/front-end/src/styles/Register.css
+++ b/front-end/src/styles/Register.css
@@ -8,6 +8,18 @@
   padding: 15% 0 0;
 }
 
+@media screen and ( max-width: 760px) {
+  .ContainerRegister {
+    background-size: 115%;
+  }
+  .InputRegister {
+    max-width: 75%;
+  }
+  .SignupBtn {
+    max-width: 50%;
+  }
+}
+
 .FormRegister {
   align-items: center;
   display: flex;
