--- a/front-end/src/styles/Sidebar.css
+++ b/front-end/src/styles/Sidebar.css
@@ -1,6 +1,7 @@
 .Header {
   background-color: #100F0F;
   color: white;
+  justify-content: center;
 }
 
 .BurgerBtn {
@@ -11,16 +12,18 @@
 }
 
 .TopTitle {
-  margin-right: 30px;
+  margin-top: auto;
+  margin: auto 30px;
+  height: 60px;
 }
 
-.SideMenuContainer {
+.side-menu-container {
   background-color: #100F0F;
   display: flex;
   flex-direction: column;
   height: 100%;
-  margin-top: -20px;
   position: absolute;
+  margin-top: auto;
   transition: 0.6s;
   width: 200px;
 }
