--- a/front-end/src/styles/Sidebar.css
+++ b/front-end/src/styles/Sidebar.css
@@ -1,7 +1,6 @@
 .Header {
   background-color: #100F0F;
   color: white;
-  justify-content: center;
 }
 
 .BurgerBtn {
@@ -12,9 +11,9 @@
 }
 
 .TopTitle {
-  margin-top: auto;
-  margin: auto 30px;
   height: 60px;
+  margin: auto 30px;
+  margin-top: auto;
 }
 
 .side-menu-container {
@@ -22,8 +21,9 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  margin: auto 10px 0 0;
+  padding: 15px;
   position: absolute;
-  margin-top: auto;
   transition: 0.6s;
   width: 200px;
 }
@@ -34,6 +34,7 @@
 
 .MenuItem {
   background-color: rgba(24, 23, 23, 0.6);
+  border-color: white;
   color: white;
   font-size: large;
   height: 50px;
