--- a/front-end/src/styles/Login.css
+++ b/front-end/src/styles/Login.css
@@ -1,5 +1,5 @@
 .ContainerLogin {
-  background-image: url(../images/FundoLogin.jpg);
+  background-image: url(../images/FundoLogin.png);
   background-position: center;
   background-repeat: no-repeat;
 }
