--- a/front-end/src/styles/Profile.css
+++ b/front-end/src/styles/Profile.css
@@ -1,36 +1,29 @@
-.ContainerRegister {
+.ProfileContainer {
   background-image: url(../images/FundoLogin.png);
   background-position: center;
   background-repeat: no-repeat;
 }
 
-.ContainerRegister h1 {
-  padding: 15% 0 0;
-}
-
-@media screen and ( max-width: 760px) {
-  .ContainerRegister {
-    background-size: 115%;
-  }
-  .InputRegister {
-    max-width: 75%;
-  }
-  .SignupBtn {
-    max-width: 50%;
-  }
-}
-
-.FormRegister {
+.FormContainer {
   align-items: center;
   display: flex;
   flex-direction: column;
-  margin: 10px;
+  margin: 15%;
   padding-bottom: 15%;
 }
 
-.SignupBtn {
+.FormContainer p {
+  margin: 5px;
+}
+
+.FormContainer button {
   background-color: chartreuse;
   border-color: chartreuse;
+  margin: 20px;
   padding: 5px 10px;
   width: 150px;
+}
+
+.FormContainer input {
+  margin: 10px;
 }
