--- a/front-end/src/styles/Register.css
+++ b/front-end/src/styles/Register.css
@@ -29,8 +29,8 @@
 }
 
 .SignupBtn {
-  background-color: chartreuse;
-  border-color: chartreuse;
+  background-color: #72B01D;
+  border-color: #72B01D;
   padding: 5px 10px;
   width: 150px;
 }
