--- a/front-end/src/styles/Details.css
+++ b/front-end/src/styles/Details.css
@@ -18,16 +18,17 @@
 
 .InfoDetails {
   align-items: center;
-  border: 1px solid;
+  background-color: whitesmoke;
+  border: 1px solid #3F7D20;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 50%;
+  width: 70%;
 }
 
 .InfoDetails button {
-  background-color: chartreuse;
-  border-color: chartreuse;
+  background-color: #3F7D20;
+  border-color: #3F7D20;
   margin: 10px 10px 20px 10px;
   padding: 5px 10px;
   width: 50%;
@@ -48,4 +49,8 @@
   justify-content: space-between;
   margin: 5px;
   width: 75%;
+}
+
+.DetailsItem {
+  margin: 10px 20px;
 }
