--- a/front-end/src/styles/Login.css
+++ b/front-end/src/styles/Login.css
@@ -26,8 +26,8 @@
 }
 
 .SigninBtn {
-  background-color: chartreuse;
-  border-color: chartreuse;
+  background-color: #72B01D;
+  border-color: #72B01D;
   padding: 5px 10px;
   width: 150px;
 }
