--- a/front-end/src/styles/Orders.css
+++ b/front-end/src/styles/Orders.css
@@ -7,7 +7,8 @@
 
 .OrdersCard {
   align-items: center;
-  border: 1px solid;
+  background-color: white;
+  border: 1px solid #3F7D20;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
