--- a/front-end/src/styles/Products.css
+++ b/front-end/src/styles/Products.css
@@ -7,13 +7,13 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 100px;
-  width: 50%;
+  width: 70%;
 }
 
 .ProductsCards {
   align-items: center;
   background-color: white;
-  border: 1px black solid;
+  border: 1px #3F7D20 solid;
   border-radius: 10%;
   box-shadow: 2px 2px 2px 0.1px black;
   display: flex;
@@ -35,7 +35,7 @@ body {
 
 .BtnCard {
   align-items: center;
-  border-top: 1px solid;
+  border-top: 1px solid #3F7D20;
   display: flex;
   height: 50%;
   justify-content: space-evenly;
@@ -63,7 +63,7 @@ body {
 }
 
 .FooterProducts {
-  background-color: green;
+  background-color: #3F7D20;
   bottom: 0;
   color: white;
   height: 50px;
